--- a/MineriaTextosPF.ipynb
+++ b/MineriaTextosPF.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO1Ir2zy6wpDQ4MJ9AxbMMh",
+      "authorship_tag": "ABX9TyNCEChH4kTCvK/phkJJsm5s",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "xTffx4J9XNu7"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import pandas as pd"
+      ]
     }
   ]
 }
